maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:22: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
    if (aMurNord() == false && getIndication(x,y-1)) {
                ^JediEscaper:25: error: not found: value aMurSud
    if (aMurSud() == false && getIndication(x,y+1)) {
        ^JediEscaper:28: error: not found: value aMurEst
    if (aMurEst() == false && getIndication(x+1,y)) {
        ^JediEscaper:31: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
    if (aMurOuest() == false && getIndication(x-1,y)) {
                 ^